# srrg2_solver

./: .clang-format  .gitignore  LICENSE  readme.md
srrg2_solver/: CMakeLists.txt  package.xml  readme.md
srrg2_solver/app/: CMakeLists.txt  solver_app_graph_converter.cpp  solver_app_graph_optimizer.cpp
srrg2_solver/doc/: Doxygen
srrg2_solver/examples/: .gitlab-ci.yml  CMakeLists.txt  example_factor_graph_initializer.cpp  example_factor_graph_visit.cpp  example_levemberg.cpp  example_linear_block_solver_cholmod_full.cpp  example_linear_solver_block_inverse.cpp  example_se2_bearing_only_slam.cpp  example_se2_icp.cpp  example_se3_pgo.cpp  example_sparse_solver_block_inverse.cpp
srrg2_solver/examples/data/: matchable_graph.boss  pose_graph_100.boss  pose_graph_100.g2o  pose_matchable_graph.g2o
srrg2_solver/src/: CMakeLists.txt
srrg2_solver/src/srrg_solver/: CMakeLists.txt  README.txt
srrg2_solver/src/srrg_solver/solver_core/: CMakeLists.txt  ad_error_factor.h  ad_error_factor_impl.cpp  ad_variable.h  behavior_analyzer.h  error_factor.h  error_factor_impl.cpp  factor.h  factor_base.cpp  factor_base.h  factor_correspondence_driven.h  factor_correspondence_driven_dynamic.h  factor_graph.cpp  factor_graph.h  factor_impl.cpp  instance_macros.h  instances.cpp  instances.h  iteration_algorithm_base.cpp  iteration_algorithm_base.h  iteration_algorithm_ddl.cpp  iteration_algorithm_ddl.h  iteration_algorithm_dl.cpp  iteration_algorithm_dl.h  iteration_algorithm_gn.cpp  iteration_algorithm_gn.h  iteration_algorithm_lm.cpp  iteration_algorithm_lm.h  measurement_owner.h  measurement_owner_impl.cpp  robustifier.cpp  robustifier.h  robustifier_policy.cpp  robustifier_policy.h  solver.cpp  solver.h  solver_action_base.h  solver_base.cpp  solver_base.h  solver_stats.cpp  (+8 more)
srrg2_solver/src/srrg_solver/solver_core/internals/: CMakeLists.txt
srrg2_solver/src/srrg_solver/utils/: CMakeLists.txt
srrg2_solver/src/srrg_solver/utils/calib_utils/: CMakeLists.txt  calib_graph_2d_assembler.cpp  calib_graph_2d_assembler.h  calib_graph_3d_assembler.cpp  calib_graph_3d_assembler.h  instances.cpp  instances.h
srrg2_solver/src/srrg_solver/utils/factor_graph_utils/: CMakeLists.txt  factor_graph_closure_validator.cpp  factor_graph_closure_validator.h  factor_graph_initializer.cpp  factor_graph_initializer.h  factor_graph_initializer_rule.cpp  factor_graph_initializer_rule.h  factor_graph_view_selector.cpp  factor_graph_view_selector.h  factor_graph_visit.cpp  factor_graph_visit.h  factor_graph_visit_cost.cpp  factor_graph_visit_cost.h  factor_graph_visit_entry.cpp  factor_graph_visit_entry.h  factor_graph_visit_policy.cpp  factor_graph_visit_policy.h  instances.cpp  instances.h
srrg2_solver/src/srrg_solver/utils/g2o_converter/: CMakeLists.txt  g2o_converter.cpp  g2o_converter.h  g2o_converter_action_base.h  g2o_converter_action_se2.cpp  g2o_converter_action_se2.h  g2o_converter_action_se3.cpp  g2o_converter_action_se3.h  g2o_converter_actions.h
srrg2_solver/src/srrg_solver/variables_and_factors/: CMakeLists.txt
srrg2_solver/src/srrg_solver/variables_and_factors/types_2d/: CMakeLists.txt  instances.cpp  instances.h  se2_plane2plane_error_factor.cpp  se2_plane2plane_error_factor.h  (+19 more)
srrg2_solver/tests/: CMakeLists.txt  factor_graph_loop_validator_test.cpp  test_g2o_graph_converter.cpp  test_linear_solver_block_inverse.cpp  test_se2_icp.cpp  test_se2_multi_point_registration.cpp  test_se2_nicp.cpp  test_se2_pgo.cpp  test_se2_prior_factor.cpp  test_se3_icp.cpp  test_se3_matchables.cpp  test_se3_motion_based_calib.cpp  test_se3_multi_point_registration.cpp  test_se3_nicp.cpp  test_se3_pgo.cpp  test_se3_pose_pose_offset_error_factor.cpp  test_se3_posit.cpp  test_se3_prior_factor.cpp  test_sim3.cpp  test_sim3_icp.cpp  test_sim3_pgo.cpp  test_sparse_block_linear_solver_cholmod_full.cpp
srrg2_solver_experiments/: CMakeLists.txt  package.xml  readme.md
srrg2_solver_experiments/src/apps/: CMakeLists.txt  gtest_bench_eth_tilting_laser.cpp  gtest_bench_icl.cpp  gtest_bench_stanford_bunny.cpp  tests.hpp
srrg2_solver_experiments/src/srrg2_solver_experiments/utility/: stanford_bunny_converter.hpp  tilting_laser_converter.h
srrg2_solver_extras/: CMakeLists.txt  package.xml  readme.md
srrg2_solver_extras/examples/: README
srrg2_solver_extras/src/: CMakeLists.txt
srrg2_solver_extras/src/srrg_solver_extras/: CMakeLists.txt
srrg2_solver_extras/src/srrg_solver_extras/types_2d_ad/: CMakeLists.txt  instances.cpp  instances.h  se2_point2point_left_error_factor_ad.cpp  se2_point2point_left_error_factor_ad.h  se2_pose_point_bearing_left_error_factor_ad.cpp  se2_pose_point_bearing_left_error_factor_ad.h  se2_pose_point_left_error_factor_ad.cpp  se2_pose_point_left_error_factor_ad.h  se2_pose_pose_left_error_factor_ad.cpp  se2_pose_pose_left_error_factor_ad.h
srrg2_solver_extras/src/srrg_solver_extras/types_3d_ad/: CMakeLists.txt  instances.cpp  instances.h  se3_point2point_euler_error_factor_ad.cpp  se3_point2point_euler_error_factor_ad.h  se3_pose_point_euler_error_factor_ad.cpp  se3_pose_point_euler_error_factor_ad.h  se3_pose_point_offset_euler_error_factor_ad.cpp  se3_pose_point_offset_euler_error_factor_ad.h  se3_pose_pose_chordal_quaternion_error_factor_ad.cpp  se3_pose_pose_chordal_quaternion_error_factor_ad.h  se3_pose_pose_error_factor_ad.cpp  se3_pose_pose_error_factor_ad.h  se3_pose_pose_euler_error_factor_ad.cpp  se3_pose_pose_euler_error_factor_ad.h  se3_prior_euler_error_factor_ad.cpp  se3_prior_euler_error_factor_ad.h
srrg2_solver_extras/tests/: CMakeLists.txt  test_se2_icp_left_ad.cpp  test_se2_multi_point_registration_left_ad.cpp  test_se2_pgo_left_ad.cpp  test_se3_icp_euler_left_ad.cpp  test_se3_multi_point_registration_euler_ad.cpp  test_se3_pgo_ad.cpp  test_se3_prior_euler_ad.cpp
srrg2_solver_gui/: CMakeLists.txt  package.xml  readme.md
srrg2_solver_gui/src/: CMakeLists.txt
srrg2_solver_gui/src/app/: CMakeLists.txt  solver_action_draw.cpp  solver_action_draw.h  srrg_solver_gui_app.cpp
srrg2_solver_gui/src/tests/: CMakeLists.txt  test_graph_viewer.cpp  test_pgo.cpp
(+118 files in other folders)
